--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -1,18 +1,36 @@
-/* line 1, ../sass/app.scss */
+/********************************
+ *
+ * MIXINS
+ *
+ *******************************/
+/* line 30, ../sass/app.scss */
+* {
+  margin: 0;
+}
+
+/* line 35, ../sass/app.scss */
 html, body {
   height: 100%;
   overflow-x: hidden;
   /*THIS IS FIXING STUFF*/
 }
 
-/* line 6, ../sass/app.scss */
+/* line 40, ../sass/app.scss */
+dl {
+  font-weight: 300 !important;
+}
+
+/* line 44, ../sass/app.scss */
+dt {
+  font-weight: normal !important;
+}
+
+/* line 48, ../sass/app.scss */
 .imgBkg {
-  background-image: url("/156323195_blur_dark.jpg");
+  background-image: url("/tall.jpg");
   background-color: #333;
   background-repeat: no-repeat;
-  /*background-size: auto 100%;*/
-  background-attachment: fixed;
-  background-position: left top;
+  background-position: left bottom;
   webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -20,69 +38,168 @@ html, body {
 }
 
 @media only screen and (min-width: 50em) {
-  /* line 20, ../sass/app.scss */
+  /* line 65, ../sass/app.scss */
   .imgBkg {
+    background-image: url("/156323195_blur_dark.jpg");
     background-size: 100% auto;
+    background-position: right top;
   }
 }
-/* line 25, ../sass/app.scss */
+/* line 74, ../sass/app.scss */
 .headerRow {
   padding-top: 3em;
   padding-bottom: 2em;
 }
 
-/* line 30, ../sass/app.scss */
+/* line 79, ../sass/app.scss */
 .heroCopy h1, .heroCopy p, .heroCopy ul {
   color: white;
   font-weight: 300;
 }
 
-/* line 35, ../sass/app.scss */
+/* line 84, ../sass/app.scss */
 #benefits {
   background-color: white;
   border-top: 1px solid #555;
-  padding-top: 1em;
-  padding-bottom: 3em;
+  padding-top: 2em;
+  padding-bottom: 2em;
 }
 
-/* line 42, ../sass/app.scss */
+/* line 91, ../sass/app.scss */
 #benefits i {
   font-size: 4em;
 }
 
-/* line 46, ../sass/app.scss */
+/* line 95, ../sass/app.scss */
 #benefits p, #benefits h4 {
   font-weight: 300;
   /*color: white;*/
 }
 
-/* line 51, ../sass/app.scss */
+/* line 100, ../sass/app.scss */
 #benefits h4 {
   text-transform: capitalize;
 }
 
-/* line 56, ../sass/app.scss */
+/* line 104, ../sass/app.scss */
+#bio {
+  background-color: #efefef;
+  padding: 2em 0;
+}
+/* line 107, ../sass/app.scss */
+#bio .social-icons a {
+  margin: 0 .5em 0 .5em;
+}
+
+/* line 113, ../sass/app.scss */
 footer {
-  background-color: white;
+  background-color: #333;
   color: #aeaeae;
   bottom: 0;
   width: 100%;
-  height: 3em;
+  height: 5em;
   /* Height of the footer */
+  padding: .5em 0;
+  margin-top: 1em;
+}
+/* line 122, ../sass/app.scss */
+footer p {
+  font-size: .875em;
+  float: right;
+}
+/* line 126, ../sass/app.scss */
+footer a {
+  font-weight: 600;
+  color: #aeaeae;
+}
+/* line 129, ../sass/app.scss */
+footer a:hover {
+  color: #626262;
+}
+/* line 133, ../sass/app.scss */
+footer ul, footer p {
+  margin-bottom: 0 !important;
+}
+/* line 136, ../sass/app.scss */
+footer i {
+  line-height: 1.75em !important;
+}
+/* line 139, ../sass/app.scss */
+footer li {
+  display: inline-block;
+  margin-right: 1em;
+}
+/* line 142, ../sass/app.scss */
+footer li:last-child {
+  margin-right: 0;
 }
 
-/* line 64, ../sass/app.scss */
-.footer-row {
-  border-top: 1px solid #aeaeae;
+/* line 148, ../sass/app.scss */
+.sidebar {
+  background-color: #fcfcfc;
+  padding-top: 1em;
+  padding-bottom: 1em;
+  margin-bottom: 0em;
+  border: 1px solid #efefef;
+}
+/* line 153, ../sass/app.scss */
+.sidebar dd {
+  margin-left: .5em;
+}
+
+/* line 160, ../sass/app.scss */
+.sidebarCopy {
+  color: #666;
+}
+
+/* line 164, ../sass/app.scss */
+.owner.panel {
+  padding: .5em 1em;
+  background-color: #fff;
+}
+/* line 167, ../sass/app.scss */
+.owner.panel h6 {
+  margin-bottom: .25em;
+}
+
+/* line 172, ../sass/app.scss */
+.ownerFunctions {
+  float: right;
+  display: inline-block;
+  margin-bottom: 0;
 }
 
 @media only screen and (max-width: 40em) {
-  /* line 70, ../sass/app.scss */
+  /* line 181, ../sass/app.scss */
+  #bio h4, #bio h5, #bio .social-icons {
+    text-align: center !important;
+  }
+
+  /* line 187, ../sass/app.scss */
+  footer {
+    margin-top: 0;
+  }
+  /* line 189, ../sass/app.scss */
+  footer p, footer ul {
+    margin: 0 auto !important;
+  }
+  /* line 192, ../sass/app.scss */
+  footer p, footer ul {
+    float: none !important;
+    text-align: center !important;
+  }
+
+  /* line 198, ../sass/app.scss */
+  .ownerFunctions {
+    float: none;
+  }
+
+  /* line 203, ../sass/app.scss */
   .itemCopy {
     margin-bottom: 1em;
   }
 
-  /* line 74, ../sass/app.scss */
+  /* line 207, ../sass/app.scss */
   .small-img {
     width: 100%;
     border: 1px solid #eee;
@@ -90,41 +207,52 @@ footer {
     margin-right: .25em;
   }
 
-  /* line 81, ../sass/app.scss */
+  /* line 214, ../sass/app.scss */
   .img-col {
     padding-right: .25em;
   }
 
-  /* line 87, ../sass/app.scss */
+  /* line 219, ../sass/app.scss */
+  .sidebar {
+    border: 0;
+  }
+
+  /* line 223, ../sass/app.scss */
   .sidebarFooter {
-    background-color: #fafafa;
+    background-color: #fcfcfc;
   }
 }
-/* line 92, ../sass/app.scss */
+/* line 228, ../sass/app.scss */
 form {
   margin: .25em;
 }
 
-/* line 96, ../sass/app.scss */
+/* line 232, ../sass/app.scss */
 .container {
   min-height: 100%;
   height: auto !important;
-  position: relative;
+  height: 100%;
+  margin: 0 auto -1em;
 }
 
-/* line 102, ../sass/app.scss */
+@media only screen and (max-width: 40em) {
+  /* line 242, ../sass/app.scss */
+  .container {
+    margin: 0 auto 0;
+  }
+}
+/* line 247, ../sass/app.scss */
 .main-section {
   background-color: white;
   padding-top: 1em;
-  padding-bottom: 3em;
 }
 
-/* line 108, ../sass/app.scss */
+/* line 253, ../sass/app.scss */
 #eventForm {
   color: white;
 }
 
-/* line 112, ../sass/app.scss */
+/* line 257, ../sass/app.scss */
 #ownerAlert {
   padding-top: .25em;
   padding-bottom: .25em;
@@ -132,12 +260,12 @@ form {
   font-size: .875em;
 }
 
-/* line 119, ../sass/app.scss */
+/* line 264, ../sass/app.scss */
 .highlight {
   background-color: rgba(255, 193, 37, 0.2);
 }
 
-/* line 123, ../sass/app.scss */
+/* line 268, ../sass/app.scss */
 #edit_eventName {
   font-size: 1em !important;
   font-weight: 300;
@@ -145,7 +273,7 @@ form {
   line-height: 1em !important;
 }
 
-/* line 130, ../sass/app.scss */
+/* line 275, ../sass/app.scss */
 #edit_eventDesc {
   font-size: 1em !important;
   font-weight: 300;
@@ -153,49 +281,55 @@ form {
   line-height: 1em !important;
 }
 
-/* line 137, ../sass/app.scss */
+/* line 282, ../sass/app.scss */
+#eventDate, #eventTime, #eventLocation {
+  display: block;
+}
+
+/* line 286, ../sass/app.scss */
 .delete {
   font-size: .875em;
   /*margin-top: 2em !important;*/
 }
 
-/* line 142, ../sass/app.scss */
-.deleteEvent {
+/* line 291, ../sass/app.scss */
+.deleteItem {
+  font-weight: 300;
   font-size: .875em;
 }
 
-/* line 146, ../sass/app.scss */
+/* line 296, ../sass/app.scss */
 h1 {
   line-height: 1.25em;
 }
 
-/* line 150, ../sass/app.scss */
+/* line 300, ../sass/app.scss */
 .desc-row {
   padding-bottom: 1em;
 }
 
-/* line 154, ../sass/app.scss */
+/* line 304, ../sass/app.scss */
 .full-width {
   width: 100%;
   margin-bottom: 0;
 }
 
-/* line 159, ../sass/app.scss */
+/* line 309, ../sass/app.scss */
 .img-col {
   padding-right: 0;
 }
 
-/* line 163, ../sass/app.scss */
+/* line 313, ../sass/app.scss */
 .smaller {
   font-size: .875em;
-  font-weight: normal;
+  font-weight: 300;
   line-height: 1.2;
   color: #888888;
   margin-bottom: 0em;
   text-align: bottom !important;
 }
 
-/* line 172, ../sass/app.scss */
+/* line 322, ../sass/app.scss */
 .item {
   border-bottom: 1px solid #ccc !important;
   padding-top: 1.25em !important;
@@ -203,63 +337,79 @@ h1 {
   padding-right: 2em !important;
 }
 
-/* line 179, ../sass/app.scss */
+/* line 329, ../sass/app.scss */
 .item:last-child {
   border-bottom: 0 !important;
   padding-bottom: 0 !important;
 }
 
-/* line 184, ../sass/app.scss */
+/* line 334, ../sass/app.scss */
 .panel {
   border: 1px solid #f0f0f0;
   padding: 1em;
   background-color: #fafafa;
 }
 
-/* line 191, ../sass/app.scss */
+/* line 341, ../sass/app.scss */
 .callout h5, .callout small {
   color: #2ba6cb !important;
 }
 
-/* line 195, ../sass/app.scss */
+/* line 345, ../sass/app.scss */
 .circle {
   display: block;
   width: 75px;
   height: 75px;
-  margin: 0em auto;
+  margin: 0 auto 0 0.5em;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
   -webkit-border-radius: 99em;
   -moz-border-radius: 99em;
   border-radius: 99em;
-  border: 3px solid #eee;
+  border: 3px solid #eeeeee;
   box-shadow: 0 3px 2px rgba(0, 0, 0, 0.3);
 }
 
-/* line 210, ../sass/app.scss */
+/* line 349, ../sass/app.scss */
 .circle-small {
   display: block;
   width: 20px;
   height: 20px;
-  margin: .875em .5em 0 0;
+  margin: 0.875em 0.5em 0 0;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
   -webkit-border-radius: 99em;
   -moz-border-radius: 99em;
   border-radius: 99em;
-  border: 1px solid #eee;
+  border: 1px solid #eeeeee;
+  box-shadow: 0 3px 2px rgba(0, 0, 0, 0.3);
+}
+
+/* line 353, ../sass/app.scss */
+.circle-large {
+  display: block;
+  width: 125px;
+  height: 125px;
+  margin: 0 auto 0 auto;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  -webkit-border-radius: 99em;
+  -moz-border-radius: 99em;
+  border-radius: 99em;
+  border: 3px solid #eeeeee;
   box-shadow: 0 3px 2px rgba(0, 0, 0, 0.3);
 }
 
 @media only screen and (max-width: 40em) {
-  /* line 226, ../sass/app.scss */
+  /* line 358, ../sass/app.scss */
   .circle-small {
     margin: 0 .25em 0 0;
   }
 }
-/* line 231, ../sass/app.scss */
+/* line 363, ../sass/app.scss */
 .small-img {
   width: 100%;
   border: 1px solid #eee;
@@ -267,31 +417,26 @@ h1 {
   margin-right: .25em;
 }
 
-/* line 240, ../sass/app.scss */
-.sidebar {
-  background-color: #fafafa;
-  padding-top: 1em;
-  padding-bottom: 1em;
-}
-
-/* line 247, ../sass/app.scss */
-.sidebarCopy {
-  color: #666;
-}
-
-/* line 251, ../sass/app.scss */
+/* line 374, ../sass/app.scss */
 #addItem {
   background-color: #2ba6cb;
   width: 100%;
 }
 
-/* line 257, ../sass/app.scss */
+/* line 380, ../sass/app.scss */
+.reveal-modal {
+  font-weight: 300;
+  position: fixed;
+}
+
+/* line 385, ../sass/app.scss */
 .modal-buttons-inline {
   margin-bottom: 0;
 }
 
-/* line 261, ../sass/app.scss */
+/* line 389, ../sass/app.scss */
 table {
   border: 0;
   width: 100%;
+  margin-bottom: 4em;
 }
