--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -11,26 +11,25 @@
 /* line 35, ../sass/app.scss */
 html, body {
   height: 100%;
-  overflow-x: hidden;
-  /*THIS IS FIXING STUFF*/
 }
 
-/* line 40, ../sass/app.scss */
+/* line 39, ../sass/app.scss */
 dl {
   font-weight: 300 !important;
 }
 
-/* line 44, ../sass/app.scss */
+/* line 43, ../sass/app.scss */
 dt {
   font-weight: normal !important;
 }
 
-/* line 48, ../sass/app.scss */
+/* line 47, ../sass/app.scss */
 .imgBkg {
-  background-image: url("/tall.jpg");
+  background-image: url("/shutterstock_143361787_tall.jpg");
   background-color: #333;
   background-repeat: no-repeat;
-  background-position: left bottom;
+  background-size: auto 100%;
+  background-position: left top;
   webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -38,26 +37,35 @@ dt {
 }
 
 @media only screen and (min-width: 50em) {
-  /* line 65, ../sass/app.scss */
+  /* line 64, ../sass/app.scss */
   .imgBkg {
-    background-image: url("/156323195_blur_dark.jpg");
+    background-image: url("/shutterstock_143361787_wide.jpg");
     background-size: 100% auto;
-    background-position: right top;
+    background-position: left top;
   }
 }
-/* line 74, ../sass/app.scss */
+/* line 73, ../sass/app.scss */
 .headerRow {
   padding-top: 3em;
   padding-bottom: 2em;
 }
 
-/* line 79, ../sass/app.scss */
+/* line 78, ../sass/app.scss */
 .heroCopy h1, .heroCopy p, .heroCopy ul {
   color: white;
   font-weight: 300;
 }
 
 /* line 84, ../sass/app.scss */
+.heroCopy p, .heroCopy ul {
+  font-size: 1.25em !important;
+}
+/* line 87, ../sass/app.scss */
+.heroCopy p {
+  margin: 1.25em 0 .5em 0;
+}
+
+/* line 92, ../sass/app.scss */
 #benefits {
   background-color: white;
   border-top: 1px solid #555;
@@ -65,33 +73,33 @@ dt {
   padding-bottom: 2em;
 }
 
-/* line 91, ../sass/app.scss */
+/* line 99, ../sass/app.scss */
 #benefits i {
   font-size: 4em;
 }
 
-/* line 95, ../sass/app.scss */
+/* line 103, ../sass/app.scss */
 #benefits p, #benefits h4 {
   font-weight: 300;
   /*color: white;*/
 }
 
-/* line 100, ../sass/app.scss */
+/* line 108, ../sass/app.scss */
 #benefits h4 {
   text-transform: capitalize;
 }
 
-/* line 104, ../sass/app.scss */
+/* line 112, ../sass/app.scss */
 #bio {
   background-color: #efefef;
   padding: 2em 0;
 }
-/* line 107, ../sass/app.scss */
+/* line 115, ../sass/app.scss */
 #bio .social-icons a {
   margin: 0 .5em 0 .5em;
 }
 
-/* line 113, ../sass/app.scss */
+/* line 121, ../sass/app.scss */
 footer {
   background-color: #333;
   color: #aeaeae;
@@ -102,39 +110,43 @@ footer {
   padding: .5em 0;
   margin-top: 1em;
 }
-/* line 122, ../sass/app.scss */
+/* line 130, ../sass/app.scss */
 footer p {
   font-size: .875em;
   float: right;
 }
-/* line 126, ../sass/app.scss */
+/* line 134, ../sass/app.scss */
 footer a {
-  font-weight: 600;
+  font-weight: 300;
   color: #aeaeae;
 }
-/* line 129, ../sass/app.scss */
+/* line 137, ../sass/app.scss */
 footer a:hover {
   color: #626262;
 }
-/* line 133, ../sass/app.scss */
+/* line 141, ../sass/app.scss */
+footer ul {
+  margin-left: 0;
+}
+/* line 144, ../sass/app.scss */
 footer ul, footer p {
   margin-bottom: 0 !important;
 }
-/* line 136, ../sass/app.scss */
+/* line 147, ../sass/app.scss */
 footer i {
   line-height: 1.75em !important;
 }
-/* line 139, ../sass/app.scss */
+/* line 150, ../sass/app.scss */
 footer li {
   display: inline-block;
   margin-right: 1em;
 }
-/* line 142, ../sass/app.scss */
+/* line 153, ../sass/app.scss */
 footer li:last-child {
   margin-right: 0;
 }
 
-/* line 148, ../sass/app.scss */
+/* line 159, ../sass/app.scss */
 .sidebar {
   background-color: #fcfcfc;
   padding-top: 1em;
@@ -142,27 +154,27 @@ footer li:last-child {
   margin-bottom: 0em;
   border: 1px solid #efefef;
 }
-/* line 153, ../sass/app.scss */
+/* line 164, ../sass/app.scss */
 .sidebar dd {
   margin-left: .5em;
 }
 
-/* line 160, ../sass/app.scss */
+/* line 171, ../sass/app.scss */
 .sidebarCopy {
   color: #666;
 }
 
-/* line 164, ../sass/app.scss */
+/* line 175, ../sass/app.scss */
 .owner.panel {
   padding: .5em 1em;
   background-color: #fff;
 }
-/* line 167, ../sass/app.scss */
+/* line 178, ../sass/app.scss */
 .owner.panel h6 {
   margin-bottom: .25em;
 }
 
-/* line 172, ../sass/app.scss */
+/* line 183, ../sass/app.scss */
 .ownerFunctions {
   float: right;
   display: inline-block;
@@ -170,36 +182,36 @@ footer li:last-child {
 }
 
 @media only screen and (max-width: 40em) {
-  /* line 181, ../sass/app.scss */
+  /* line 192, ../sass/app.scss */
   #bio h4, #bio h5, #bio .social-icons {
     text-align: center !important;
   }
 
-  /* line 187, ../sass/app.scss */
+  /* line 198, ../sass/app.scss */
   footer {
     margin-top: 0;
   }
-  /* line 189, ../sass/app.scss */
+  /* line 200, ../sass/app.scss */
   footer p, footer ul {
     margin: 0 auto !important;
   }
-  /* line 192, ../sass/app.scss */
+  /* line 203, ../sass/app.scss */
   footer p, footer ul {
     float: none !important;
     text-align: center !important;
   }
 
-  /* line 198, ../sass/app.scss */
+  /* line 209, ../sass/app.scss */
   .ownerFunctions {
     float: none;
   }
 
-  /* line 203, ../sass/app.scss */
+  /* line 214, ../sass/app.scss */
   .itemCopy {
     margin-bottom: 1em;
   }
 
-  /* line 207, ../sass/app.scss */
+  /* line 218, ../sass/app.scss */
   .small-img {
     width: 100%;
     border: 1px solid #eee;
@@ -207,27 +219,28 @@ footer li:last-child {
     margin-right: .25em;
   }
 
-  /* line 214, ../sass/app.scss */
+  /* line 225, ../sass/app.scss */
   .img-col {
     padding-right: .25em;
   }
 
-  /* line 219, ../sass/app.scss */
+  /* line 230, ../sass/app.scss */
   .sidebar {
     border: 0;
   }
 
-  /* line 223, ../sass/app.scss */
+  /* line 234, ../sass/app.scss */
   .sidebarFooter {
     background-color: #fcfcfc;
+    border-top: 1px solid #efefef;
   }
 }
-/* line 228, ../sass/app.scss */
+/* line 240, ../sass/app.scss */
 form {
   margin: .25em;
 }
 
-/* line 232, ../sass/app.scss */
+/* line 244, ../sass/app.scss */
 .container {
   min-height: 100%;
   height: auto !important;
@@ -236,23 +249,23 @@ form {
 }
 
 @media only screen and (max-width: 40em) {
-  /* line 242, ../sass/app.scss */
+  /* line 254, ../sass/app.scss */
   .container {
     margin: 0 auto 0;
   }
 }
-/* line 247, ../sass/app.scss */
+/* line 259, ../sass/app.scss */
 .main-section {
   background-color: white;
   padding-top: 1em;
 }
 
-/* line 253, ../sass/app.scss */
+/* line 265, ../sass/app.scss */
 #eventForm {
   color: white;
 }
 
-/* line 257, ../sass/app.scss */
+/* line 269, ../sass/app.scss */
 #ownerAlert {
   padding-top: .25em;
   padding-bottom: .25em;
@@ -260,12 +273,12 @@ form {
   font-size: .875em;
 }
 
-/* line 264, ../sass/app.scss */
+/* line 276, ../sass/app.scss */
 .highlight {
   background-color: rgba(255, 193, 37, 0.2);
 }
 
-/* line 268, ../sass/app.scss */
+/* line 280, ../sass/app.scss */
 #edit_eventName {
   font-size: 1em !important;
   font-weight: 300;
@@ -273,7 +286,7 @@ form {
   line-height: 1em !important;
 }
 
-/* line 275, ../sass/app.scss */
+/* line 287, ../sass/app.scss */
 #edit_eventDesc {
   font-size: 1em !important;
   font-weight: 300;
@@ -281,45 +294,45 @@ form {
   line-height: 1em !important;
 }
 
-/* line 282, ../sass/app.scss */
+/* line 294, ../sass/app.scss */
 #eventDate, #eventTime, #eventLocation {
   display: block;
 }
 
-/* line 286, ../sass/app.scss */
+/* line 298, ../sass/app.scss */
 .delete {
   font-size: .875em;
   /*margin-top: 2em !important;*/
 }
 
-/* line 291, ../sass/app.scss */
+/* line 303, ../sass/app.scss */
 .deleteItem {
   font-weight: 300;
   font-size: .875em;
 }
 
-/* line 296, ../sass/app.scss */
+/* line 309, ../sass/app.scss */
 h1 {
   line-height: 1.25em;
 }
 
-/* line 300, ../sass/app.scss */
+/* line 313, ../sass/app.scss */
 .desc-row {
   padding-bottom: 1em;
 }
 
-/* line 304, ../sass/app.scss */
+/* line 317, ../sass/app.scss */
 .full-width {
   width: 100%;
   margin-bottom: 0;
 }
 
-/* line 309, ../sass/app.scss */
+/* line 322, ../sass/app.scss */
 .img-col {
   padding-right: 0;
 }
 
-/* line 313, ../sass/app.scss */
+/* line 326, ../sass/app.scss */
 .smaller {
   font-size: .875em;
   font-weight: 300;
@@ -329,33 +342,42 @@ h1 {
   text-align: bottom !important;
 }
 
-/* line 322, ../sass/app.scss */
+/* line 335, ../sass/app.scss */
 .item {
   border-bottom: 1px solid #ccc !important;
   padding-top: 1.25em !important;
   padding-bottom: 1.25em !important;
-  padding-right: 2em !important;
+}
+/* line 340, ../sass/app.scss */
+.item .button {
+  padding: .875em;
+  min-width: 6em;
+  margin: 0;
+}
+/* line 346, ../sass/app.scss */
+.item h4 {
+  margin: 0;
 }
 
-/* line 329, ../sass/app.scss */
+/* line 353, ../sass/app.scss */
 .item:last-child {
   border-bottom: 0 !important;
   padding-bottom: 0 !important;
 }
 
-/* line 334, ../sass/app.scss */
+/* line 358, ../sass/app.scss */
 .panel {
   border: 1px solid #f0f0f0;
   padding: 1em;
   background-color: #fafafa;
 }
 
-/* line 341, ../sass/app.scss */
+/* line 365, ../sass/app.scss */
 .callout h5, .callout small {
   color: #2ba6cb !important;
 }
 
-/* line 345, ../sass/app.scss */
+/* line 369, ../sass/app.scss */
 .circle {
   display: block;
   width: 75px;
@@ -371,7 +393,7 @@ h1 {
   box-shadow: 0 3px 2px rgba(0, 0, 0, 0.3);
 }
 
-/* line 349, ../sass/app.scss */
+/* line 373, ../sass/app.scss */
 .circle-small {
   display: block;
   width: 20px;
@@ -387,7 +409,7 @@ h1 {
   box-shadow: 0 3px 2px rgba(0, 0, 0, 0.3);
 }
 
-/* line 353, ../sass/app.scss */
+/* line 377, ../sass/app.scss */
 .circle-large {
   display: block;
   width: 125px;
@@ -404,12 +426,12 @@ h1 {
 }
 
 @media only screen and (max-width: 40em) {
-  /* line 358, ../sass/app.scss */
+  /* line 382, ../sass/app.scss */
   .circle-small {
     margin: 0 .25em 0 0;
   }
 }
-/* line 363, ../sass/app.scss */
+/* line 387, ../sass/app.scss */
 .small-img {
   width: 100%;
   border: 1px solid #eee;
@@ -417,24 +439,23 @@ h1 {
   margin-right: .25em;
 }
 
-/* line 374, ../sass/app.scss */
+/* line 398, ../sass/app.scss */
 #addItem {
   background-color: #2ba6cb;
   width: 100%;
 }
 
-/* line 380, ../sass/app.scss */
+/* line 404, ../sass/app.scss */
 .reveal-modal {
   font-weight: 300;
-  position: fixed;
 }
 
-/* line 385, ../sass/app.scss */
+/* line 409, ../sass/app.scss */
 .modal-buttons-inline {
   margin-bottom: 0;
 }
 
-/* line 389, ../sass/app.scss */
+/* line 413, ../sass/app.scss */
 table {
   border: 0;
   width: 100%;
