--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -89,17 +89,28 @@ dt {
   text-transform: capitalize;
 }
 
-/* line 112, ../sass/app.scss */
+/* line 114, ../sass/app.scss */
+#responsive .row {
+  border-top: 2px solid #efefef;
+  padding-top: 2em;
+  padding-bottom: 2em;
+}
+/* line 119, ../sass/app.scss */
+#responsive img {
+  width: 100%;
+}
+
+/* line 124, ../sass/app.scss */
 #bio {
   background-color: #efefef;
   padding: 2em 0;
 }
-/* line 115, ../sass/app.scss */
+/* line 127, ../sass/app.scss */
 #bio .social-icons a {
   margin: 0 .5em 0 .5em;
 }
 
-/* line 121, ../sass/app.scss */
+/* line 133, ../sass/app.scss */
 footer {
   background-color: #333;
   color: #aeaeae;
@@ -110,43 +121,43 @@ footer {
   padding: .5em 0;
   margin-top: 1em;
 }
-/* line 130, ../sass/app.scss */
+/* line 142, ../sass/app.scss */
 footer p {
   font-size: .875em;
   float: right;
 }
-/* line 134, ../sass/app.scss */
+/* line 146, ../sass/app.scss */
 footer a {
   font-weight: 300;
   color: #aeaeae;
 }
-/* line 137, ../sass/app.scss */
+/* line 149, ../sass/app.scss */
 footer a:hover {
   color: #626262;
 }
-/* line 141, ../sass/app.scss */
+/* line 153, ../sass/app.scss */
 footer ul {
   margin-left: 0;
 }
-/* line 144, ../sass/app.scss */
+/* line 156, ../sass/app.scss */
 footer ul, footer p {
   margin-bottom: 0 !important;
 }
-/* line 147, ../sass/app.scss */
+/* line 159, ../sass/app.scss */
 footer i {
   line-height: 1.75em !important;
 }
-/* line 150, ../sass/app.scss */
+/* line 162, ../sass/app.scss */
 footer li {
   display: inline-block;
   margin-right: 1em;
 }
-/* line 153, ../sass/app.scss */
+/* line 165, ../sass/app.scss */
 footer li:last-child {
   margin-right: 0;
 }
 
-/* line 159, ../sass/app.scss */
+/* line 171, ../sass/app.scss */
 .sidebar {
   background-color: #fcfcfc;
   padding-top: 1em;
@@ -154,27 +165,27 @@ footer li:last-child {
   margin-bottom: 0em;
   border: 1px solid #efefef;
 }
-/* line 164, ../sass/app.scss */
+/* line 176, ../sass/app.scss */
 .sidebar dd {
   margin-left: .5em;
 }
 
-/* line 171, ../sass/app.scss */
+/* line 183, ../sass/app.scss */
 .sidebarCopy {
   color: #666;
 }
 
-/* line 175, ../sass/app.scss */
+/* line 187, ../sass/app.scss */
 .owner.panel {
   padding: .5em 1em;
   background-color: #fff;
 }
-/* line 178, ../sass/app.scss */
+/* line 190, ../sass/app.scss */
 .owner.panel h6 {
   margin-bottom: .25em;
 }
 
-/* line 183, ../sass/app.scss */
+/* line 195, ../sass/app.scss */
 .ownerFunctions {
   float: right;
   display: inline-block;
@@ -182,36 +193,36 @@ footer li:last-child {
 }
 
 @media only screen and (max-width: 40em) {
-  /* line 192, ../sass/app.scss */
+  /* line 204, ../sass/app.scss */
   #bio h4, #bio h5, #bio .social-icons {
     text-align: center !important;
   }
 
-  /* line 198, ../sass/app.scss */
+  /* line 210, ../sass/app.scss */
   footer {
     margin-top: 0;
   }
-  /* line 200, ../sass/app.scss */
+  /* line 212, ../sass/app.scss */
   footer p, footer ul {
     margin: 0 auto !important;
   }
-  /* line 203, ../sass/app.scss */
+  /* line 215, ../sass/app.scss */
   footer p, footer ul {
     float: none !important;
     text-align: center !important;
   }
 
-  /* line 209, ../sass/app.scss */
+  /* line 221, ../sass/app.scss */
   .ownerFunctions {
     float: none;
   }
 
-  /* line 214, ../sass/app.scss */
+  /* line 226, ../sass/app.scss */
   .itemCopy {
     margin-bottom: 1em;
   }
 
-  /* line 218, ../sass/app.scss */
+  /* line 230, ../sass/app.scss */
   .small-img {
     width: 100%;
     border: 1px solid #eee;
@@ -219,28 +230,28 @@ footer li:last-child {
     margin-right: .25em;
   }
 
-  /* line 225, ../sass/app.scss */
+  /* line 237, ../sass/app.scss */
   .img-col {
     padding-right: .25em;
   }
 
-  /* line 230, ../sass/app.scss */
+  /* line 242, ../sass/app.scss */
   .sidebar {
     border: 0;
   }
 
-  /* line 234, ../sass/app.scss */
+  /* line 246, ../sass/app.scss */
   .sidebarFooter {
     background-color: #fcfcfc;
     border-top: 1px solid #efefef;
   }
 }
-/* line 240, ../sass/app.scss */
+/* line 252, ../sass/app.scss */
 form {
   margin: .25em;
 }
 
-/* line 244, ../sass/app.scss */
+/* line 256, ../sass/app.scss */
 .container {
   min-height: 100%;
   height: auto !important;
@@ -249,23 +260,23 @@ form {
 }
 
 @media only screen and (max-width: 40em) {
-  /* line 254, ../sass/app.scss */
+  /* line 266, ../sass/app.scss */
   .container {
     margin: 0 auto 0;
   }
 }
-/* line 259, ../sass/app.scss */
+/* line 271, ../sass/app.scss */
 .main-section {
   background-color: white;
   padding-top: 1em;
 }
 
-/* line 265, ../sass/app.scss */
+/* line 277, ../sass/app.scss */
 #eventForm {
   color: white;
 }
 
-/* line 269, ../sass/app.scss */
+/* line 281, ../sass/app.scss */
 #ownerAlert {
   padding-top: .25em;
   padding-bottom: .25em;
@@ -273,12 +284,12 @@ form {
   font-size: .875em;
 }
 
-/* line 276, ../sass/app.scss */
+/* line 288, ../sass/app.scss */
 .highlight {
   background-color: rgba(255, 193, 37, 0.2);
 }
 
-/* line 280, ../sass/app.scss */
+/* line 292, ../sass/app.scss */
 #edit_eventName {
   font-size: 1em !important;
   font-weight: 300;
@@ -286,7 +297,7 @@ form {
   line-height: 1em !important;
 }
 
-/* line 287, ../sass/app.scss */
+/* line 299, ../sass/app.scss */
 #edit_eventDesc {
   font-size: 1em !important;
   font-weight: 300;
@@ -294,45 +305,45 @@ form {
   line-height: 1em !important;
 }
 
-/* line 294, ../sass/app.scss */
+/* line 306, ../sass/app.scss */
 #eventDate, #eventTime, #eventLocation {
   display: block;
 }
 
-/* line 298, ../sass/app.scss */
+/* line 310, ../sass/app.scss */
 .delete {
   font-size: .875em;
   /*margin-top: 2em !important;*/
 }
 
-/* line 303, ../sass/app.scss */
+/* line 315, ../sass/app.scss */
 .deleteItem {
   font-weight: 300;
   font-size: .875em;
 }
 
-/* line 309, ../sass/app.scss */
+/* line 321, ../sass/app.scss */
 h1 {
   line-height: 1.25em;
 }
 
-/* line 313, ../sass/app.scss */
+/* line 325, ../sass/app.scss */
 .desc-row {
   padding-bottom: 1em;
 }
 
-/* line 317, ../sass/app.scss */
+/* line 329, ../sass/app.scss */
 .full-width {
   width: 100%;
   margin-bottom: 0;
 }
 
-/* line 322, ../sass/app.scss */
+/* line 334, ../sass/app.scss */
 .img-col {
   padding-right: 0;
 }
 
-/* line 326, ../sass/app.scss */
+/* line 338, ../sass/app.scss */
 .smaller {
   font-size: .875em;
   font-weight: 300;
@@ -342,42 +353,42 @@ h1 {
   text-align: bottom !important;
 }
 
-/* line 335, ../sass/app.scss */
+/* line 347, ../sass/app.scss */
 .item {
   border-bottom: 1px solid #ccc !important;
   padding-top: 1.25em !important;
   padding-bottom: 1.25em !important;
 }
-/* line 340, ../sass/app.scss */
+/* line 352, ../sass/app.scss */
 .item .button {
   padding: .875em;
   min-width: 6em;
   margin: 0;
 }
-/* line 346, ../sass/app.scss */
+/* line 358, ../sass/app.scss */
 .item h4 {
   margin: 0;
 }
 
-/* line 353, ../sass/app.scss */
+/* line 365, ../sass/app.scss */
 .item:last-child {
   border-bottom: 0 !important;
   padding-bottom: 0 !important;
 }
 
-/* line 358, ../sass/app.scss */
+/* line 370, ../sass/app.scss */
 .panel {
   border: 1px solid #f0f0f0;
   padding: 1em;
   background-color: #fafafa;
 }
 
-/* line 365, ../sass/app.scss */
+/* line 377, ../sass/app.scss */
 .callout h5, .callout small {
   color: #2ba6cb !important;
 }
 
-/* line 369, ../sass/app.scss */
+/* line 381, ../sass/app.scss */
 .circle {
   display: block;
   width: 75px;
@@ -393,7 +404,7 @@ h1 {
   box-shadow: 0 3px 2px rgba(0, 0, 0, 0.3);
 }
 
-/* line 373, ../sass/app.scss */
+/* line 385, ../sass/app.scss */
 .circle-small {
   display: block;
   width: 20px;
@@ -409,7 +420,7 @@ h1 {
   box-shadow: 0 3px 2px rgba(0, 0, 0, 0.3);
 }
 
-/* line 377, ../sass/app.scss */
+/* line 389, ../sass/app.scss */
 .circle-large {
   display: block;
   width: 125px;
@@ -426,12 +437,12 @@ h1 {
 }
 
 @media only screen and (max-width: 40em) {
-  /* line 382, ../sass/app.scss */
+  /* line 394, ../sass/app.scss */
   .circle-small {
     margin: 0 .25em 0 0;
   }
 }
-/* line 387, ../sass/app.scss */
+/* line 399, ../sass/app.scss */
 .small-img {
   width: 100%;
   border: 1px solid #eee;
@@ -439,23 +450,23 @@ h1 {
   margin-right: .25em;
 }
 
-/* line 398, ../sass/app.scss */
+/* line 410, ../sass/app.scss */
 #addItem {
   background-color: #2ba6cb;
   width: 100%;
 }
 
-/* line 404, ../sass/app.scss */
+/* line 416, ../sass/app.scss */
 .reveal-modal {
   font-weight: 300;
 }
 
-/* line 409, ../sass/app.scss */
+/* line 421, ../sass/app.scss */
 .modal-buttons-inline {
   margin-bottom: 0;
 }
 
-/* line 413, ../sass/app.scss */
+/* line 425, ../sass/app.scss */
 table {
   border: 0;
   width: 100%;
